force-app/main/default/objects/Activity/fields/Account_Discussed__c.field-meta.xml
<CustomField>
    <fullName>Account_Discussed__c</fullName>
    <label>Account Discussed</label>
    <type>TextArea</type>
</CustomField>