force-app/main/default/objects/Activity/fields/Is_Primary_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Primary_Event__c</fullName>
    <formula>OwnerId = CreatedById</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Primary Event</label>
    <type>Checkbox</type>
</CustomField>