force-app/main/default/objects/Activity/fields/Target_Focus__c.field-meta.xml
<CustomField>
    <fullName>Target_Focus__c</fullName>
    <label>Target Focus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Main</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>