force-app/main/default/objects/Activity/fields/Visit_Detail__c.field-meta.xml
<CustomField>
    <fullName>Visit_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Visit Detail</label>
    <referenceTo>Visit_Detail__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>